<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/linearLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".activities.ViewFoodDonation">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/food_photo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"/>


        <TextView
            android:id="@+id/food_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/foodQuanity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Quanity"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Description"
            android:textColor="@color/black"
            android:textSize="15dp"/>




        <Button
            android:id="@+id/accept_food_button"
            android:layout_width="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="390dp"
            android:text="Accept Food" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/rounded_nav"
        android:elevation="3dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>