...
        android:layout_marginTop="24dp"
        android:src="@drawable/community_eats_logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="60dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/rounded_edittext"
...
        android:shape="rectangle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="377dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
...
        android:shape="rectangle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="223dp"
        android:layout_height="56dp"
        android:layout_marginTop="464dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
...
