...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#58E967"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_container"
    tools:context=".activities.HomeScreenActivity">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/market_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scrollbars="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
...
