<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/nav_food"
        android:title="Food"
        android:icon="@drawable/ic_forkspoon"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/nav_profile"
        android:title="Profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/black"/>
</menu>
