...
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update Profile Pic" />


    </LinearLayout>
...

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
...
